force-app/main/default/objects/ssot__CoverageBenefitVerificationRequest__dlm/fields/ssot__CoverageBenefitId__c.field-meta.xml
<CustomField>
    <fullName>ssot__CoverageBenefitId__c</fullName>
    <label>Coverage Benefit</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>CoverageBenefitId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>