force-app/main/default/objects/ssot__CoverageBenefitVerificationRequest__dlm/fields/ssot__rel_1716726063929_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1716726063929_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CoverageBenefitVerificationRequest_M_rel</label>
    <referenceTo>ssot__MemberPlan__dlm</referenceTo>
    <relationshipLabel>CoverageBenefitVerificationRequest_M_rel</relationshipLabel>
    <relationshipName>rel_1716726063929_end</relationshipName>
    <type>Lookup</type>
</CustomField>