force-app/main/default/objects/ssot__CoverageBenefitVerificationRequest__dlm/fields/ssot__RequestDate__c.field-meta.xml
<CustomField>
    <fullName>ssot__RequestDate__c</fullName>
    <label>Request Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RequestDate</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>