force-app/main/default/objects/ssot__CoverageBenefitVerificationRequest__dlm/fields/ssot__StatusReasonCode__c.field-meta.xml
<CustomField>
    <fullName>ssot__StatusReasonCode__c</fullName>
    <label>Status Reason Code</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>StatusReasonCode</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>